Clean up the interface just a tiny bit.

--- a/src/main/resources/templates/component/edit.html
+++ b/src/main/resources/templates/component/edit.html
@@ -13,13 +13,13 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="title">Title</label>
             <div class="col-sm-10">
-                <input id="title" type="text" title="title" th:field="*{title}"/>
+                <input id="title" type="text" title="title" th:field="*{title}" class="form-control"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="author">Author</label>
             <div class="col-sm-10">
-                <input id="author" type="text" title="author" th:field="*{author}"/>
+                <input id="author" type="text" title="author" th:field="*{author}" class="form-control"/>
             </div>
         </div>
         <div class="form-group">
@@ -31,7 +31,7 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="author">Deleted</label>
             <div class="col-sm-10">
-                <input id="deleted" type="checkbox" title="deleted" th:field="*{deleted}"/>
+                <input id="deleted" type="checkbox" title="deleted" th:field="*{deleted}" class="form-control"/>
             </div>
         </div>
 
