--- a/src/main/resources/templates/component/register.html
+++ b/src/main/resources/templates/component/register.html
@@ -10,33 +10,36 @@
     <div th:if="${param.error}" class="alert alert-danger">Invalid username or password.</div>
     <div th:if="${param.logout}" class="alert alert-danger">You have been logged out.</div>
 
-    <form th:action="@{/register}" method="post" class="form-horizontal">
-        <div class="form-group">
+    <form th:action="@{/register}" method="post" class="form-horizontal" th:object="${user}">
+        <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger">
+            <p th:each="error : ${#fields.allErrors()}" th:text="${error}">Error message</p>
+        </div>
+        <div th:class="${#fields.hasErrors('email')} ? 'form-group has-error' : 'form-group'">
             <label class="control-label col-sm-2" for="email"> Email: </label>
 
             <div class="col-sm-10">
-                <input id="email" type="text" name="email" class="form-control"/>
+                <input id="email" type="text" name="email" th:field="*{email}" class="form-control" th:errorclass=" is-invalid"/>
             </div>
         </div>
-        <div class="form-group">
+        <div th:class="${#fields.hasErrors('name')} ? 'form-group has-error' : 'form-group'">
             <label class="control-label col-sm-2" for="name"> Name: </label>
 
             <div class="col-sm-10">
-                <input id="name" type="text" name="name" class="form-control"/>
+                <input id="name" type="text" name="name" th:field="*{name}" class="form-control" th:errorclass=" is-invalid"/>
             </div>
         </div>
-        <div class="form-group">
+        <div th:class="${#fields.hasErrors('password')} ? 'form-group has-error' : 'form-group'">
             <label class="control-label col-sm-2" for="password"> Password: </label>
 
             <div class="col-sm-10">
-                <input id="password" type="password" name="password" class="form-control"/>
+                <input id="password" type="password" name="password" th:field="*{password}" class="form-control" th:errorclass=" is-invalid"/>
             </div>
         </div>
-        <div class="form-group">
+        <div th:class="${#fields.hasErrors('repeatPassword')} ? 'form-group has-error' : 'form-group'">
             <label class="control-label col-sm-2" for="repeatPassword"> Repeat password: </label>
 
             <div class="col-sm-10">
-                <input id="repeatPassword" type="password" name="repeatPassword" class="form-control"/>
+                <input id="repeatPassword" type="password" name="repeatPassword" th:field="*{repeatPassword}" class="form-control" th:errorclass=" is-invalid"/>
             </div>
         </div>
         <div class="form-actions col-sm-offset-2 col-sm-10">
