--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -18,11 +18,14 @@
                 <ul class="nav navbar-nav">
                     <li><a th:href="@{/deleted}" href="component/posts.html">Deleted posts</a></li>
                 </ul>
-<!--
-                <ul class="nav pull-right">
-                    <li><a th:href="@{/logout}" class="menu-right" > Logout </a></li>
+                <ul class="nav navbar-nav pull-right">
+                    <li><a th:href="@{/register}">Register</a></li>
+                    <li>
+                        <form th:action="@{/logout}" method="post">
+                            <button type="submit" class="btn btn-link navbar-btn">Log out</button>
+                        </form>
+                    </li>
                 </ul>
--->
             </div>
         </div>
     </nav>
