--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,6 +28,9 @@
         <div class="form-actions col-sm-offset-2 col-sm-10">
             <input type="submit" class="btn btn-primary" value="Log in"/>
         </div>
+        <div class="col-sm-10 col-sm-offset-2">
+            <a th:href="@{/register}" >Create a new account</a>
+        </div>
     </form>
 
 </div>
