All that was lost can be reset

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,8 @@
             <input type="submit" class="btn btn-primary" value="Log in"/>
         </div>
         <div class="col-sm-10 col-sm-offset-2">
-            <a th:href="@{/register}" >Create a new account</a>
+            <a th:href="@{/register}" >Create a new account</a><br/>
+            <a th:href="@{/lostPassword}">I lost my password</a>
         </div>
     </form>
 
